--- a/webserver/package.json
+++ b/webserver/package.json
@@ -4,8 +4,8 @@
     "start": "node ./webserver.api.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   },
-
   "type": "module"
 }
